<resources>
    <string name="app_name">My App Portfolio</string>

    <!-- Button Names -->
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

    <!-- Temp Alert Messages -->
    <string name="launch_message">This button will launch my %1$s app!</string>
</resources>
