<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps!"
        android:textSize="@dimen/title_size" />

    <Button
        android:id="@+id/spotify"
        style="@style/AppButton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scores"
        style="@style/AppButton"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library"
        style="@style/AppButton"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/builditbigger"
        style="@style/AppButton"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/reader"
        style="@style/AppButton"
        android:text="@string/reader" />

    <Button
        android:id="@+id/capstone"
        style="@style/AppButton"
        android:background="@color/btn_capstone_bg"
        android:text="@string/capstone" />
</LinearLayout>
